2010-04-29  Ivan Maidanski <ivmai@mail.ru>

	* doc/README_malloc.txt: Fix a typo.
	* doc/README_stack.txt: Ditto.

2010-02-25  Ivan Maidanski <ivmai@mail.ru> (really Bruce Mitchener)

	* .cvsignore: New file.
	* doc/.cvsignore: Ditto.
	* src/.cvsignore: Ditto.
	* src/atomic_ops/.cvsignore: Ditto.
	* src/atomic_ops/sysdeps/.cvsignore: Ditto.
	* tests/.cvsignore: Ditto.

2010-02-19  Ivan Maidanski <ivmai@mail.ru> (mostly really Patrick Marlier)

	* src/atomic_ops/sysdeps/gcc/x86.h (AO_compare_and_swap_full):
	Use __sync_bool_compare_and_swap() if AO_USE_SYNC_CAS_BUILTIN.
	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_compare_and_swap_full):
	Ditto.
	* src/atomic_ops.h (AO_USE_SYNC_CAS_BUILTIN): New macro defined
	if GCC v4.2+ or Intel compiler v11.1+ (only for amd64).
	* src/atomic_ops.h: Include GCC-specific sysdeps files for Intel
	compiler in GCC compatible mode (only for x86 and amd64).

2010-02-18  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_nop_full): Don't check
	for AO_USE_PENTIUM4_INSTRS (since "mfence" (SSE2) is supported on
	all x86_64/amd64 chips); remove the comment.
	* src/atomic_ops/sysdeps/msftc/x86_64.h (AO_nop_full): Ditto.
	* src/atomic_ops/sysdeps/msftc/x86_64.h (AO_nop_full): Define only
	if AO_ASM_X64_AVAILABLE.
	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_compare_and_swap_full):
	Use built-in __sync_bool_compare_and_swap() if GCC v4.2+.

2010-02-17  Ivan Maidanski <ivmai@mail.ru> (really Patrick Marlier)

	* src/atomic_ops/sysdeps/gcc/x86.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Use EAX for the result
	since cmpxchg clobbers it.
	* src/atomic_ops/sysdeps/sunc/x86.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Ditto.
	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Ditto.
	* src/atomic_ops/sysdeps/sunc/x86_64.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Ditto.
