@@ -1,3 +1,8 @@
+2010-05-21  Ivan Maidanski <ivmai@mail.ru> (really Bradley Smith)
+
+	* src/atomic_ops.h: Recognize __avr32__ (include gcc/avr32.h).
+	* src/atomic_ops/sysdeps/gcc/avr32.h: New file.
+
 2010-04-29  Ivan Maidanski <ivmai@mail.ru>
 
 	* doc/README_malloc.txt: Fix a typo.
